# gitbar

./: CHANGELOG.md  LICENSE.md  README.md  bump.sh  components.json  index.html  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.cjs  tailwind.config.js  tsconfig.json  vite.config.ts
.github/: funding.yml
.github/workflows/: publish.yml  test.yml  website.yml
.storybook/: WindowDecorator.svelte  main.cjs  preview.js
.storybook/mocks/: auth.js  github.js
scripts/: update-latest.cjs
src/: App.svelte  App.tsx  app.css  index.css  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: auto_start.rs  commands.rs  main.rs  server.rs  utils.rs
src/actions/: api.ts
src/api/: azure.ts  github.ts
src/components/: AuthGuard.svelte  Button.svelte  Filters.svelte  Footer.svelte  Image.svelte  Image.tsx  Login.stories.ts  Login.svelte  LoginAzure.svelte  LoginGithub.svelte  Modal.svelte  Range.svelte  Reviews.stories.ts  Reviews.svelte  Select.svelte  Settings.svelte  Tabs.svelte  Theme.svelte  Toggle.svelte  Toggle.tsx
src/hooks/: auth.tsx  use-form.tsx  use-github.tsx  use-interval.ts
src/layouts/: Main.tsx
src/lib/: api.ts  app.ts  auth.ts  formatters.ts  github.ts  reviews.ts  storage.ts  theme.ts  url.ts  validators.ts  window-size.ts
src/routes/: AuthenticationRoutes.tsx  MainRoutes.tsx  index.tsx
src/stories/: Button.stories.ts  Footer.stories.ts  Header.stories.ts  Login.stories.ts  Page.stories.ts  (+1 more)
website/: package.json  svelte.config.js  tailwind.config.cjs  vite.config.js
(+14 files in other folders)
