[package]
name = "gitbar"
version = "0.6.0"
description = "Github review counter"
authors = ["mikael.kristiansson"]
license = "MIT"
repository = "https://github.com/mikaelkristiansson/gitbar"
default-run = "gitbar"
edition = "2021"
rust-version = "1.67"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0"
auto-launch = "0.3"
thiserror = "1.0"
tauri-plugin-positioner = { version = "1.0.4", features = ["system-tray"] }
serde = { version = "1.0", features = ["derive"] }
tiny_http = "0.12.0"
ascii = "1.1.0"
tauri = { version = "1.2.3", features = [ "window-set-size",
    "updater",
    "http-request",
    "icon-png",
    "notification-all",
    "shell-open",
    "system-tray",
] }
port_scanner = "*"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24"
objc = "0.2.7"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
